[gd_scene load_steps=13 format=2]

[ext_resource path="res://UnderGroundWorld/spiderwebnew.png" type="Texture" id=1]
[ext_resource path="res://UnderGroundWorld/spiderden.png" type="Texture" id=2]
[ext_resource path="res://UnderGroundWorld/spiderincave.png" type="Texture" id=3]
[ext_resource path="res://UnderGroundWorld/SpiderArea1.gd" type="Script" id=4]
[ext_resource path="res://UnderGroundWorld/Brokenweb.png" type="Texture" id=5]
[ext_resource path="res://UnderGroundWorld/explosionattempt2.png" type="Texture" id=6]
[ext_resource path="res://UnderGroundWorld/SpiderCaveEntrance.gd" type="Script" id=7]
[ext_resource path="res://Enemies/mixkit-dense-bomb-impact-2801.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 29.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31, 27.25 )

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Explosionattempt2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[node name="SpiderBossEntrance" type="Node2D"]

[node name="SpiderDen" type="Sprite" parent="."]
position = Vector2( 161, 91 )
texture = ExtResource( 2 )

[node name="Spiderincave" type="Sprite" parent="SpiderDen"]
position = Vector2( -65, 43 )
texture = ExtResource( 3 )

[node name="Spiderwebnew" type="Sprite" parent="SpiderDen/Spiderincave"]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="SpiderDen"]
position = Vector2( 3, -3 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpiderDen/Area2D"]
position = Vector2( -68, 46 )
shape = SubResource( 1 )

[node name="Brokenweb" type="Sprite" parent="SpiderDen"]
visible = false
position = Vector2( -65, 44 )
texture = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="SpiderDen"]
position = Vector2( -162, -90 )
stream = ExtResource( 8 )

[node name="SpiderArea" type="Area2D" parent="SpiderDen"]
position = Vector2( -161, -88 )
script = ExtResource( 7 )

[node name="SpiderCollision2D" type="CollisionShape2D" parent="SpiderDen/SpiderArea"]
position = Vector2( 98, 129 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/explosion = SubResource( 3 )

[node name="Explosionattempt2" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 94, 138 )
texture = ExtResource( 6 )
hframes = 5

[connection signal="body_entered" from="SpiderDen/Area2D" to="SpiderDen/Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="SpiderDen/SpiderArea" to="SpiderDen/SpiderArea" method="_on_SpiderArea_body_entered"]
[connection signal="body_exited" from="SpiderDen/SpiderArea" to="SpiderDen/SpiderArea" method="_on_SpiderArea_body_exited"]
